--- a/event.html
+++ b/event.html
@@ -16,10 +16,10 @@
   </main>
       <ul id="navList">
           <li><a href="./index.html">Home</a></li>
-          <li><a href="./about.html">About Us</a></li>
+          <li><a href="about">About Us</a></li>
           <li><a href="./index.html#comm">Community</a></li>
-          <li><a href="./event.html">Events</a></li>
-          <li><a href="./team.html">Team</a></li>
+          <li><a href="event">Events</a></li>
+          <li><a href="team">Team</a></li>
           <li><a href="#foot">Contact</a></li>
       </ul>
   </nav>
@@ -65,7 +65,7 @@
             <h1>Event Details</h1>
             <div class="eveinfo">
               <p><img src="./images/date.png" alt="" /> 28th & 29th April 2023</p>
-              <p id="time"><img src="./images/time.png" alt="" /> 9am - 4pm</p>
+              <p id="time"><img src="./images/time.png" alt="" /> 9am - 4pm WAT</p>
             </div>
             <div class="eveinfo">
               <p>
@@ -97,10 +97,10 @@
       </article>
       <article class="form">
         <form action="">
-          <input type="text" name="" id="" placeholder="Firstname">
-          <input type="text" name="" id="" placeholder="Lastname">
-          <input type="email" name="" id="" placeholder="Email address">
-          <input type="text" name="" id="" placeholder="Phone number">
+          <input type="text" name="" id="" placeholder="FirstName">
+          <input type="text" name="" id="" placeholder="LastName">
+          <input type="email" name="" id="" placeholder="Email Address">
+          <input type="text" name="" id="" placeholder="Phone Number">
           <input type="text" name="" id="" placeholder="Career in Tech">
           <input type="text" name="" id="" placeholder="State of Resisdence">
           <input type="submit" value="Register Now" id="reg">
@@ -369,8 +369,8 @@
     <span>
       <a href="http://www.linkedin.com/in/BlockchainUNN"><img src="./images/linked3.png" alt="" id="ln"> </a>
       <a href="http://www.twitter.com/BlockchainUNN"><img src="./images/twitter.png" alt="" id="footertw"> </a>
-      <a href="http://www.twitter.com/BlockchainUNN"><img src="./images/youtube.png" alt=""> </a>
-      <a href="http://www.facebook.com/"><img src="./images/facebook.png" alt="" id="footerfb"> </a>
+      <a href="https://youtube.com/@BlockchainUNN"><img src="./images/youtube.png" alt=""> </a>
+            <a href="https://m.facebook.com/BlockchainUNN"><img src="./images/facebook.png" alt="" id="footerfb"> </a>
       <a href="http://www.instagram.com/BlockchainUNN"><img src="./images/instagram.png" alt="" id="footerig"> </a>
     </span>
   </div>
