--- a/team.html
+++ b/team.html
@@ -16,10 +16,10 @@
     </main>
         <ul id="navList">
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./about.html">About Us</a></li>
+            <li><a href="about">About Us</a></li>
             <li><a href="./index.html#comm">Community</a></li>
-            <li><a href="./event.html">Events</a></li>
-            <li><a href="./team.html">Team</a></li>
+            <li><a href="event">Events</a></li>
+            <li><a href="team">Team</a></li>
             <li><a href="#foot">Contact</a></li>
         </ul>
     </nav>
@@ -254,8 +254,8 @@
             <div class="footer-container">
                     <span>
                     <p><a href="./index.html#comm">Community</a></p>
-                    <p><a href="./event.html">Events</a></p>
-                    <p><a href="./team.html">Team</a></p>
+                    <p><a href="event">Events</a></p>
+                    <p><a href="team">Team</a></p>
                 </span>
                 <span>
                     <p><a href="http://t.me/BlockchainUNN">Join Us</a></p>
@@ -266,8 +266,8 @@
         <div class="orgs">
             <a href="http://www.linkedin.com/in/BlockchainUNN"><img src="./images/linked3.png" alt="" id="ln"> </a>
             <a href="http://www.twitter.com/BlockchainUNN"><img src="./images/twitter.png" alt="" id="footertw"> </a>
-            <a href="http://www.twitter.com/BlockchainUNN"><img src="./images/youtube.png" alt=""> </a>
-            <a href="http://www.facebook.com/"><img src="./images/facebook.png" alt="" id="footerfb"> </a>
+            <a href="https://youtube.com/@BlockchainUNN"><img src="./images/youtube.png" alt=""> </a>
+            <a href="https://m.facebook.com/BlockchainUNN"><img src="./images/facebook.png" alt="" id="footerfb"> </a>
             <a href="http://www.instagram.com/BlockchainUNN"><img src="./images/instagram.png" alt="" id="footerig"> </a>
         </div>
         <div class="contact">
