--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ src="https://www.youtube.com/embed/XBuTjIBjQOA">
     </header>
     <article class="cfs">
         <main class="teaml">
-            <img src="./images/annaele.png" alt="" class="photo" id="nduka">
+            <img src="./images/NK1_0709muy 2.png" alt="" class="photo" id="nduka">
             <div class="cfst">
                 <h2>Nduka Annaelechukwu Anthony</h2>
                 <p>Lead and Co-founder, BlockchainUNN;
