--- a/team.html
+++ b/team.html
@@ -46,7 +46,7 @@
     </span>
         <article>
             <main class="one">
-                <img src="./images/annaele.png" alt="" class="photo">
+                <img src="./images/NK1_0709muy 2.png" alt="" class="photo">
                 <div class="text">
                     <h2>Nduka Annaelechukwu Anthony</h2>
                     <p> Lead and Co-founder, BlockchainUNN;
