--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
             <ul id="navList">
                 <li><a href="#home">Home</a></li>
                 <li><a href="about">About Us</a></li>
+                <li style="display: none;"><a href="login"></a></li>
                 <li><a href="#comm">Community</a></li>
-                <li><a href="event">Events</a></li>
+                <li><a href="event.html">Events</a></li>
                 <li><a href="team">Team</a></li>
                 <li><a href="#foot">Contact</a></li>
             </ul>
